--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -763,14 +763,14 @@ Lastly, figure~\ref{fig:maxtime} illustrates the time needed to spread the messa
 
 \begin{figure}
 	\centering
-	\includegraphics[width=3in]{figs/boxplotHopsNodes}
+	\includegraphics[width=3in]{figs/bpHopsNodes}
 	\caption{The maximum amount of hops the message experienced over the duration of a whole simulation.}
-	\label{fig:maxhops}
+	\label{fig:bpHopsNodes}
 \end{figure}
 
 \begin{figure}
 	\centering
-	\includegraphics[width=3in]{figs/Rplot}
+	\includegraphics[width=3in]{figs/bpTimeNodes}
 	\caption{The spread time under different number of nodes cases}
 	\label{fig:bpTimeNodes}
 \end{figure}
