--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -767,7 +767,7 @@ Lastly, figure~\ref{fig:maxtime} illustrates the time needed to spread the messa
 	\centering
 	\includegraphics[width=3in]{figs/bpHopsNodes}
 	\caption{The maximum amount of hops the message experienced over the duration of a whole simulation.}
-	\label{fig:bpHopsNodes}
+	\label{fig:maxhops}
 \end{figure}
 
 \begin{figure}
