--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -854,8 +854,13 @@ We would like to thank Dr. Bechir Hamdaoui for his advising. We also would like 
 
 \appendices
 \section{Division of Responsibilities}
-Appendix one text goes here.
+Our team of three members had different responsibilities in fullfilling the project's goal. All of us did reasearch in the field of IoT, Sensor Networks and distributed algorithms. Each of us wrote different sections of the paper and helped improving all other sections by proof-reading.
 
+The two graduate students -- Marco Falke and Tingzhi Li -- wrote the section about related work. Marco Falke wrote about Virtual Networks and Tingzhi Li covered WiFi Direct.
+
+The different coding parts were assigned as follows. Jinming Mu did the initial setup of ns-3 and coded the topology creationg part of the code. Marco Falke had the responsibility to implement the Gossip protocol in form of a ns-3 application. Furthermore, he wrote the topology file parser to read a given topology file. Lastly, he coded the connection between the ICMP level of ns-3 and application level. Tingzhi Li did modifications to the ICMP part of ns-3 to allow transmission of modified control messages. Moreover, he wrote code to process the produced data and create plots.
+
+%... Please add stuff that I was missing. Hardly remember the things. ;) --Marco
 
 \end{document}
 
