--- a/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
+++ b/paper/Sensor Network Virtualization for Cloud-based Remote Sensing.tex
@@ -527,7 +527,7 @@ However, the main challenge here is that IoT devices are often resource limited 
 
 \section{Problem Statement}\label{sec:problem}
 
-The goal of our project is to evaluate the gossip protocol in the simulation tool ns-3. First, we need to costumize the gossip protocol control messages based on ICMP. Second, we need to develop the gossip protocol and implement it in ns-3. Finanlly, we are supposed to evaluate the performance of the gossip protocol in a mesh network of peer-to-peer connected IoT devices by running simulations in ns-3. In the mesh network, each node usually has multiple edges and we assume that there is no isolated node in the network.
+The goal of our project is to evaluate the gossip protocol in the simulation tool ns-3. First, we need to customize the gossip protocol control messages based on ICMP. Second, we need to develop the gossip protocol and implement it in ns-3. Finanlly, we are supposed to evaluate the performance of the gossip protocol in a mesh network of peer-to-peer connected IoT devices by running simulations in ns-3. In the mesh network, each node usually has multiple edges and we assume that there is no isolated node in the network.
 
 There are three essential performance metrics we would like to measure. 
 
